Update to Lab3 work

--- a/lab3/bank.ipynb
+++ b/lab3/bank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -17,12 +17,54 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import KFold, cross_val_score, GridSearchCV\n",
+    "from sklearn.model_selection import KFold, GridSearchCV, cross_val_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "bank = pd.read_csv(\"bank-additional-full.csv\")\n",
-    "bank = pd.DataFrame(bank)\n",
-    "print (bank.shape)"
+    "print(bank.shape)\n",
+    "\n",
+    "data = pd.get_dummies(bank)\n",
+    "data.pop(\"y_no\")\n",
+    "data.pop(\"duration\")\n",
+    "sns.distplot(data[\"y_yes\"])\n",
+    "\n",
+    "train_data = data.drop(columns=[\"y_yes\"])\n",
+    "train_target = data[[\"y_yes\"]]\n",
+    "\n",
+    "# Maximum number of levels in tree\n",
+    "max_depth = [5, 10, 15, None]\n",
+    "# Minimum number of samples required to split a node\n",
+    "min_samples_split = [2, 5, 10]\n",
+    "# Minimum number of samples required at each leaf node\n",
+    "min_samples_leaf = [1, 2, 5]\n",
+    "\n",
+    "score = []\n",
+    "k_fold = KFold(n_splits=5)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=2000)\n",
+    "score_tree = cross_val_score(clf, train_data, train_target, cv=k_fold, n_jobs=-1)\n",
+    "print('Average accuracy:', np.mean(score_tree))\n",
+    "\n",
+    "clf.fit(train_data, train_target)\n",
+    "\n",
+    "# Plot non-normalized confusion matrix\n",
+    "predict = clf.predict(train_data)\n",
+    "cm = confusion_matrix(train_target, predict)\n",
+    "best_features = clf.feature_importances_\n",
+    "\n",
+    "importances = clf.feature_importances_\n",
+    "std = np.std([tree.feature_importances_ for tree in clf.estimators_], axis=0)\n",
+    "indices = np.argsort(importances)[::-1]\n",
+    "print(indices)\n",
+    "# Print the feature ranking\n",
+    "print(\"Feature ranking:\")\n",
+    "\n",
+    "for f in range(len(train_data.columns)):\n",
+    "    print(\"%d. %s (%f)\" % (f + 1, train_data.columns.values[indices[f]],  importances[indices[f]]))\n",
+    "print(\"DONE\")\n"
    ]
   },
   {
@@ -31,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = bank.drop(columns=[\"y\"])\n",
-    "train_target = bank[[\"y\"]]"
+    ""
    ]
   },
   {
@@ -41,23 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier()\n",
-    "\n",
-    "# Number of trees in random forest\n",
-    "n_estimators = [500,1000,1500,2000, 2500, 3000]\n",
-    "# Maximum number of levels in tree\n",
-    "max_depth = [5,10,15,20,25,30,None]\n",
-    "# Minimum number of samples required to split a node\n",
-    "min_samples_split = [2, 5, 10]\n",
-    "# Minimum number of samples required at each leaf node\n",
-    "min_samples_leaf = [1, 2, 5]\n",
-    "\n",
-    "\n",
-    "grid = {'n_estimators': n_estimators,\n",
-    "               'max_depth': max_depth,\n",
-    "               'min_samples_split': min_samples_split,\n",
-    "               'min_samples_leaf': min_samples_leaf,\n",
-    "               }"
+    ""
    ]
   },
   {
@@ -81,19 +106,7 @@
     }
    ],
    "source": [
-    "clf = GridSearchCV(estimator=clf, param_grid=grid, n_jobs = -1)\n",
-    "\n",
-    "score = []\n",
-    "k_fold = KFold(n_splits=5)\n",
-    "for train_indices, test_indices in k_fold.split(train_data):\n",
-    "    clf.fit(train_data[train_indices], train_target[train_indices])\n",
-    "    score.append(clf.score(train_data[test_indices], train_target[test_indices]))\n",
-    "    print('Best Max Depth:', clf.best_estimator_.max_depth,\n",
-    "          'Best Number Trees:', clf.best_estimator_.n_estimators,\n",
-    "          'Best min samples split:', clf.best_estimator_.min_samples_split,\n",
-    "          'Best min samples leaf:', clf.best_estimator_.min_samples_leaf,\n",
-    "          'Fold test accuracy:', score[-1])\n",
-    "print('Average accuracy: {} %'.format(np.mean(score)*100))"
+    ""
    ]
   },
   {
