--- a/lab4/Rec_correct.ipynb
+++ b/lab4/Rec_correct.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -176,7 +176,7 @@
     "    \n",
     "    #print item_id\n",
     "    prediction_rating = predict_rating(user_id, item_id)\n",
-    "    err =  ( prediction_rating- rating );\n",
+    "    err =  ( prediction_rating- rating )\n",
     "    #print err\n",
     "    user_pref_values = latent_user_preferences[user_id][:]\n",
     "    latent_user_preferences[user_id] -= alpha * err * latent_item_features[item_id]\n",
@@ -218,210 +218,210 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032437086265058\n"
+      "26.530844761647703\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032438172056443\n"
+      "1.3398554829671077\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203243969178623\n"
+      "1.2628749020655714\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203244159940388\n"
+      "1.2356332116654303\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032443853826478\n"
+      "1.221536946288412\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032446418410554\n"
+      "1.2144544702189082\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032449260483506\n"
+      "1.2106288497618263\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032452350925156\n"
+      "1.2083829632367917\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032455663792525\n"
+      "1.2069687675540242\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032459175982968\n"
+      "1.2060276127145249\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032462866931337\n"
+      "1.2053735192791442\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032466718337902\n"
+      "1.2049031042657312\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032470713924066\n"
+      "1.2045554123088333\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203247483921319\n"
+      "1.2042926808096621\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032479081334146\n"
+      "1.2040905207652965\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032483428845502\n"
+      "1.2039326160772796\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.20324878715782\n"
+      "1.2038077196370662\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032492400495063\n"
+      "1.2037078774127252\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032497007565357\n"
+      "1.203627338931507\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032501685652892\n"
+      "1.2035618667627328\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032506428416356\n"
+      "1.203508286136133\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203251123022052\n"
+      "1.2034641836210043\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032516086057228\n"
+      "1.2034277009235577\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032520991475129\n"
+      "1.2033973909021007\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032525942517205\n"
+      "1.2033721151956949\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203253093566527\n"
+      "1.2033509702497986\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.203253596779068\n"
+      "1.2033332330750195\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032541036110551\n"
+      "1.2033183209460871\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032546138148932\n"
+      "1.2033057610972675\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2032551271702328\n"
+      "1.2032951676846995\n"
      ]
     }
    ],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -441,10 +441,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[  7.181,   1.621,  11.159,   4.149,   5.743],\n       [  3.548,   2.22 , -12.232,   7.577,   5.837],\n       [  8.088,   2.277,   6.922,   6.432,   7.423],\n       [  9.587,   2.796,   7.   ,   7.999,   9.002],\n       [  6.47 ,   1.609,   8.202,   4.315,   5.488],\n       [  2.837,   0.608,   4.809,   1.514,   2.201],\n       [  5.274,   1.318,   6.604,   3.543,   4.487],\n       [  7.526,   2.474,   2.004,   7.366,   7.657],\n       [  2.308,   1.828, -12.762,   6.425,   4.609],\n       [  3.963,   0.99 ,   4.958,   2.663,   3.372]])"
+       "array([[  7.202,   1.629,  10.903,   4.142,   5.727],\n       [  3.533,   2.204, -11.474,   7.575,   5.86 ],\n       [  8.105,   2.28 ,   6.92 ,   6.425,   7.415],\n       [  9.598,   2.8  ,   7.001,   8.003,   8.999],\n       [  6.524,   1.615,   8.207,   4.303,   5.491],\n       [  2.845,   0.602,   4.8  ,   1.474,   2.173],\n       [  5.259,   1.326,   6.324,   3.564,   4.479],\n       [  7.498,   2.476,   2.008,   7.392,   7.657],\n       [  2.32 ,   1.808, -11.854,   6.397,   4.631],\n       [  3.985,   0.992,   4.951,   2.649,   3.366]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -475,10 +475,13 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-eefdbd657f59>, line 4)",
+     "ename": "NameError",
+     "evalue": "name 'predictions' is not defined",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-eefdbd657f59>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    comparison_data.applymap(lambda (x,y): \"(%2.3f|%2.3f)\"%(x,y))\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-fc89030ce1e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_ratings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mcomparison_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcomparison_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcomparison_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapplymap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx_y\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m\"(%2.3f|%2.3f)\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_y\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx_y\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'predictions' is not defined"
      ],
      "output_type": "error"
     }
@@ -487,7 +490,7 @@
     "values = [zip(user_ratings[i], predictions[i]) for i in range(0,predictions.shape[0])]\n",
     "comparison_data = pd.DataFrame(values)\n",
     "comparison_data.columns = data.columns\n",
-    "comparison_data.applymap(lambda (x,y): \"(%2.3f|%2.3f)\"%(x,y))"
+    "comparison_data.applymap(lambda x_y: \"(%2.3f|%2.3f)\"%(x_y[0],x_y[1]))"
    ]
   },
   {
