--- a/lab4/Rec_features.ipynb
+++ b/lab4/Rec_features.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -105,9 +105,9 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-997103e35dda>, line 10)",
+     "evalue": "invalid syntax (<ipython-input-9-997103e35dda>, line 10)",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-997103e35dda>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    print item_features_df.to_latex()\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-997103e35dda>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    print item_features_df.to_latex()\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ],
      "output_type": "error"
     }
@@ -122,7 +122,7 @@
     "user_features = user_features_df.values\n",
     "item_features = item_features_df.values\n",
     "\n",
-    "print item_features_df.to_latex()\n",
+    "print (item_features_df.to_latex())\n",
     "\n",
     "\n",
     "user_features = np.concatenate([np.ones(shape = (user_features.shape[0],1)), user_features], axis = 1)\n",
@@ -193,7 +193,7 @@
     "                    err = train(user_id,item_id,rating)\n",
     "                    error.append(err)\n",
     "    mse = (np.array(error) ** 2).mean()          \n",
-    "    print mse\n",
+    "    print (mse)\n",
     "                    \n",
     "                    \n",
     "    \n",
